--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- https://stackoverflow.com/questions/22192291/how-to-change-the-status-bar-color-in-android -->
+    <color name="colorPrimaryDark">@color/GT_Color_Navy</color>
+    <color name="colorPrimary">@color/GT_Color_Navy</color>
+    <color name="colorAccent">@color/GT_Color</color>
+    <color name="textColorPrimary">#FFFFFFFF</color>
+    <color name="navigationBarColor">@color/GT_Color_Navy</color>
+    <color name="GT_Color">#EAAA00</color> <!-- http://www.comm.gatech.edu/brand/colors -->
+    <color name="GT_Color_Navy">#001220</color>
 </resources>
