--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,16 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_map"
+        android:id="@+id/map_fragment"
         android:icon="@drawable/menu_location_icon"
         android:title="@string/title_activity_maps" />
 
     <item
-        android:id="@+id/navigation_chat"
+        android:id="@+id/chat_fragment"
         android:icon="@drawable/menu_chat_icon"
         android:title="@string/title_chat" />
     <item
-        android:id="@+id/navigation_profile"
+        android:id="@+id/profile_fragment"
         android:icon="@drawable/menu_profile_icon"
         android:title="@string/title_profile" />
 
