--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,10 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/mapsFragment">
+    app:startDestination="@id/map_fragment">
     <fragment
-        android:id="@+id/mapsFragment"
+        android:id="@+id/map_fragment"
         android:name="com.example.jacketcoach.MapsFragment"
         android:label="@string/map_fragment_label"
         tools:layout="@layout/fragment_maps" />
+    <fragment
+        android:id="@+id/profile_fragment"
+        android:name="com.example.jacketcoach.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/chat_fragment"
+        android:name="com.example.jacketcoach.ChatFragment"
+        android:label="fragment_chat"
+        tools:layout="@layout/fragment_chat" />
 </navigation>
