--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -3,11 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- "Mark Favorite", should appear as action button if possible -->
-    <item android:id="@+id/action_search"
-        android:title="@string/action_search"
+<!--    <item android:id="@+id/action_search"-->
+<!--        android:title="@string/action_search"-->
+<!--        android:icon="@drawable/ic_search_action"-->
+<!--        app:showAsAction="ifRoom|collapseActionView"-->
+<!--        app:actionViewClass="androidx.appcompat.widget.SearchView" />-->
+    <item
+        android:id="@+id/action_search"
         android:icon="@drawable/ic_search_action"
-        app:showAsAction="ifRoom|collapseActionView"
-        app:actionViewClass="androidx.appcompat.widget.SearchView" />
+        android:title="@string/action_search"
+        app:showAsAction="always|collapseActionView" />
 
     <item
         android:id="@+id/action_favorite"
