--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,6 +7,11 @@
         android:title="@string/title_activity_maps" />
 
     <item
+        android:id="@+id/event_fragment"
+        android:icon="@drawable/menu_event_icon"
+        android:title="Events" />
+
+    <item
         android:id="@+id/chat_fragment"
         android:icon="@drawable/menu_chat_icon"
         android:title="@string/title_chat" />
