--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,6 +10,11 @@
         android:label="@string/map_fragment_label"
         tools:layout="@layout/fragment_maps" />
     <fragment
+        android:id="@+id/event_fragment"
+        android:name="com.mas.jacketcoach.EventFragment"
+        android:label="fragment_event"
+        tools:layout="@layout/fragment_event" />
+    <fragment
         android:id="@+id/profile_fragment"
         android:name="com.mas.jacketcoach.ProfileFragment"
         android:label="fragment_profile"
