--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -35,12 +35,12 @@
                 android:layout_marginStart="30dp" />
 
             <EditText
-                android:id="@+id/firstNameEditText"
+                android:id="@+id/fullNameEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:hint="First Name"
+                android:hint="Full Name"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginStart="30dp" />
