Signout implemented + User persistency

--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -30,4 +30,9 @@
         android:title="@string/action_settings"
         app:showAsAction="never"/>
 
+    <!-- Firebase Auth user sign out in overflow -->
+    <item android:id="@+id/action_signout"
+        android:title="@string/action_signout"
+        app:showAsAction="never" />
+
 </menu>
