--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -19,11 +19,11 @@
         android:title="Center on current location"
         app:showAsAction="always"/>
 
-    <item
-        android:id="@+id/action_favorite"
-        android:icon="@drawable/ic_baseline_favorite_border_24"
-        android:title="@string/action_favorite"
-        app:showAsAction="ifRoom"/>
+<!--    <item-->
+<!--        android:id="@+id/action_favorite"-->
+<!--        android:icon="@drawable/ic_baseline_favorite_border_24"-->
+<!--        android:title="@string/action_favorite"-->
+<!--        app:showAsAction="ifRoom"/>-->
 
     <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/action_settings"
