--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,15 +19,23 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         />
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
         tools:context=".RegisterActivity">
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="30dp"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:textColor="@color/GT_Color"
+            android:text="Add New Event" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -35,7 +44,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
 
                 <EditText
                     android:id="@+id/date"
@@ -56,11 +64,20 @@
                     android:layout_marginEnd="30dp"
                     android:layout_marginStart="30dp" />
 
+                <Spinner
+                    android:id="@+id/sport_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="38dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginEnd="30dp" />
+
                 <EditText
-                    android:id="@+id/sport"
+                    android:id="@+id/other_sport"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
+                    android:visibility="invisible"
                     android:hint="Sport"
                     android:layout_marginTop="30dp"
                     android:layout_marginEnd="30dp"
