--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -37,8 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="78dp"
-        android:layout_marginEnd="32dp"
+        android:layout_margin="32dp"
         android:src="@drawable/ic_add_circle_icon"
         android:contentDescription="@string/add_event"
         app:elevation="2dp"
