Chat fragment hidden for Sprint 5 since it is not core func.

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,10 +11,11 @@
         android:icon="@drawable/menu_event_icon"
         android:title="Events" />
 
-    <item
-        android:id="@+id/chat_fragment"
-        android:icon="@drawable/menu_chat_icon"
-        android:title="@string/title_chat" />
+    <!-- Chat fragment hidden for Sprint 5 as it is not a core functionality for now -->
+<!--    <item-->
+<!--        android:id="@+id/chat_fragment"-->
+<!--        android:icon="@drawable/menu_chat_icon"-->
+<!--        android:title="@string/title_chat" />-->
     <item
         android:id="@+id/profile_fragment"
         android:icon="@drawable/menu_profile_icon"
