--- a/app/src/main/res/layout/event_windowmap.xml
+++ b/app/src/main/res/layout/event_windowmap.xml
@@ -1,54 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal">
 
     <TextView
         android:id="@+id/text_event_nom"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="@color/black"/>
 
     <TextView
         android:id="@+id/text_event_sport"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="@color/black"/>
 
     <TextView
         android:id="@+id/text_event_date"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="@color/black"/>
 
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:gravity="center_horizontal">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_participate"
             android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:textSize="11dp"
-            android:textColor="@color/colorAccent"
-            android:text="Participate"/>
+            android:layout_height="match_parent"
+            android:textSize="14sp"
+            android:textColor="@color/GT_Color"
+            android:text="Participate"
+            android:theme="@style/BorderedButton"
+            app:backgroundTint="@color/GT_Color_Navy"
+            app:cornerRadius="10dp"
+            app:strokeColor="@color/GT_Color"
+            app:strokeWidth="2dp"
+            android:height="80dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="15dp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_contact"
             android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:textSize="11dp"
-            android:text="Contact Organizer" />
+            android:layout_height="match_parent"
+            android:textSize="14sp"
+            android:text="Contact Organizer"
+            android:theme="@style/BorderedButton"
+            android:textColor="@color/white"
+            app:backgroundTint="@color/GT_Color_Navy"
+            app:cornerRadius="10dp"
+            app:strokeColor="@color/GT_Color"
+            app:strokeWidth="2dp"
+            android:height="80dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_share"
             android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:textSize="11dp"
-            android:text="Share" />
+            android:layout_height="match_parent"
+            android:textSize="14sp"
+            android:text="Share"
+            android:theme="@style/BorderedButton"
+            android:textColor="@color/white"
+            app:backgroundTint="@color/GT_Color_Navy"
+            app:cornerRadius="10dp"
+            app:strokeColor="@color/GT_Color"
+            app:strokeWidth="2dp"
+            android:height="80dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="10dp"/>
 
-    </LinearLayout>
-
+        </LinearLayout>
+    </HorizontalScrollView>
 
 </LinearLayout>
