--- a/app/src/main/res/layout/event_windowmap.xml
+++ b/app/src/main/res/layout/event_windowmap.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal">
 
     <TextView
-        android:id="@+id/text_event_nom"
+        android:id="@+id/text_event_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
@@ -84,6 +84,24 @@
             app:strokeColor="@color/GT_Color"
             app:strokeWidth="2dp"
             android:height="80dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="10dp"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_cancel_event"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="14sp"
+            android:text="Cancel"
+            android:theme="@style/BorderedButton"
+            android:textColor="@color/white"
+            app:backgroundTint="@color/GT_Color_Navy"
+            app:cornerRadius="10dp"
+            app:strokeColor="@color/GT_Color"
+            app:strokeWidth="2dp"
+            android:height="80dp"
+            android:visibility="gone"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="10dp"/>
