UI updates to EventWindowMap. Local backend implemented, firebase requires changes in DB

--- a/app/src/main/res/layout/event_windowmap.xml
+++ b/app/src/main/res/layout/event_windowmap.xml
@@ -43,7 +43,7 @@
             android:layout_height="match_parent"
             android:textSize="14sp"
             android:textColor="@color/GT_Color"
-            android:text="Participate"
+            android:text="@string/participate"
             android:theme="@style/BorderedButton"
             app:backgroundTint="@color/GT_Color_Navy"
             app:cornerRadius="10dp"
