FloatingActionButton margin fixed

--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -37,7 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="32dp"
+        android:layout_marginBottom="70dp"
+        android:layout_marginEnd="20dp"
         android:src="@drawable/ic_add_circle_icon"
         android:contentDescription="@string/add_event"
         app:elevation="2dp"
