--- a/app/src/main/res/layout/activity_eventmonitor.xml
+++ b/app/src/main/res/layout/activity_eventmonitor.xml
@@ -129,6 +129,7 @@
             android:textColor="@color/GT_Color"
             android:textSize="13sp" />
         <Button
+            android:id="@+id/event_view_on_map"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/button_view_on_map_label"/>
