--- a/app/src/main/res/layout/activity_eventmonitor.xml
+++ b/app/src/main/res/layout/activity_eventmonitor.xml
@@ -6,6 +6,13 @@
     android:orientation="vertical"
     android:layout_marginHorizontal="10dp"
     android:layout_marginTop="10dp">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/monitoring_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
