--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/appLogoLoginPage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:srcCompat="@mipmap/ic_launcher_round"
+                app:srcCompat="@mipmap/ic_sport_balls_round"
                 android:contentDescription="@string/jacketcoach_logo_description" />
 
             <TextView
@@ -93,7 +93,7 @@
                 android:gravity="start"
                 android:onClick="registerUserOnLogin"/>
 
-            <com.google.android.material.button.MaterialButton
+           <!-- <com.google.android.material.button.MaterialButton
                 android:theme="@style/BorderedButton"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                 android:id="@+id/debugButton"
@@ -109,7 +109,7 @@
                 android:layout_marginTop="60dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginStart="30dp"
-                android:onClick="debugOnClick"/>
+                android:onClick="debugOnClick"/> -->
 
             <!-- Source: https://www.courierherald.com/wp-content/uploads/2021/03/24448735_web1_Sports-Seasons-ECH-210310_1.jpg -->
 <!--            <ImageView-->
