--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -169,6 +169,7 @@
                     android:text="Remember to bring gear!"
                     android:textSize="18dp"
                     android:layout_marginTop="30dp"
+                    android:textStyle="bold"
                     android:layout_marginEnd="30dp"
                     android:layout_marginStart="30dp" />
 
