--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -3,22 +3,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_marginHorizontal="12dp"
     android:paddingTop="12dp"
     android:minHeight="64dp">
 
-    <TextView
-        android:id="@+id/event_name"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        tools:text="@tools:sample/first_names" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/event_sport"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        tools:text="@tools:sample/lorem"
-        android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/event_name"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            tools:text="@tools:sample/first_names" />
+
+        <TextView
+            android:id="@+id/event_date"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            tools:text="@tools:sample/first_names" />
+
+        <TextView
+            android:id="@+id/event_sport"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            tools:text="@tools:sample/lorem"
+            android:layout_weight="1"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="end|center_vertical"
+        android:layout_gravity="end|center_vertical">
+
+        <ImageView
+            android:id="@+id/event_sport_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="sportLogo"
+            android:gravity="end|center_vertical" />
+    </LinearLayout>
+
 </LinearLayout>
