backend add event updates

--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -154,7 +154,7 @@
                 <EditText
                     android:id="@+id/other_sport"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:ems="10"
                     android:visibility="invisible"
                     android:hint="Sport"
