--- a/app/src/main/res/layout/activity_eventmonitor.xml
+++ b/app/src/main/res/layout/activity_eventmonitor.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -163,11 +164,24 @@
             android:text="Location"
             android:textColor="@color/GT_Color"
             android:textSize="13sp" />
-        <Button
+<!--        <Button-->
+<!--            android:id="@+id/event_view_on_map"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="@string/button_view_on_map_label"/>-->
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/event_view_on_map"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/button_view_on_map_label"/>
+            android:textSize="14sp"
+            android:textColor="@color/GT_Color"
+            android:text="@string/button_view_on_map_label"
+            android:theme="@style/BorderedButton"
+            app:backgroundTint="@color/GT_Color_Navy"
+            app:cornerRadius="10dp"
+            app:strokeColor="@color/GT_Color"
+            app:strokeWidth="2dp"
+            android:height="50dp"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
