--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -39,15 +39,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="end|center_vertical"
-        android:layout_gravity="end|center_vertical">
+        android:gravity="end|center_vertical|center_horizontal"
+        android:layout_gravity="end|center_vertical|center_horizontal">
 
         <ImageView
             android:id="@+id/event_sport_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="sportLogo"
-            android:gravity="end|center_vertical" />
+            android:gravity="end|center_vertical|center_horizontal" />
     </LinearLayout>
 
 </LinearLayout>
